<resources>
    <string name="app_name" translatable="false">JUET Outpass</string>
    <string name="student_name">Name of the Student</string>
    <string name="student_enrollment">Enrollment of the Student</string>
    <string name="student_branch">Branch of the student</string>
    <string name="student_year">Year of the student</string>
    <string name="student_sem">Semester of the Student</string>
    <string name="place_on_leave">Place while on leave</string>
    <string name="student_purpose">Purpose for leave</string>
    <string name="student_mobileNumber">Student\'s Mobile Number</string>
    <string name="parent_mobileNumber">Parent\'s Mobile Number</string>
    <string name="home_address">Enter Home Address</string>
    <string name="hostel_number">Enter Hostel Number</string>
    <string name="room_number">Enter Room Number</string>
    <string name="bed_number">Enter Bed Number</string>
    <string name="submit_button">Submit</string>
    <string name="save_button">Save</string>
    <string name="leave_from">From</string>
    <string name="leave_to">To</string>
    <string name="Profile">Profile</string>
    <string name="previousApplication">Previous Applications</string>
    <string name="currentApplication">Current Applications</string>
    <string name="applyNow">Apply Now</string>
    <string name="Logout">Logout</string>
    <string name="startingMessage">Outpass at your fingertips.</string>
    <string name="startingButton">Get Started</string>
    <string name="loginMessage">Let’s help you to get an Outpass at your figertips.</string>
    <string name="parent_s_email_id">Parent\'s Email ID</string>
</resources>