<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    tools:context=".HomeActivityFaculty">

    <ImageView
        android:id="@+id/elipseDesign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/elipse" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/pageName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/elipseDesign"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-30dp"
        android:fontFamily="@font/inter_extrabold"
        android:text="Dashboard!"
        android:textColor="#545454"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/applicationImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_below="@id/pageName"
        android:layout_centerInParent="true"
        android:src="@drawable/application" />



    <ImageView
        android:id="@+id/elipseDesignBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/elipseback" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/applicationImage"
        android:layout_centerHorizontal="true"
        android:scrollIndicators="none"
        android:scrollbarThumbHorizontal="@null"
        android:scrollbarThumbVertical="@null"
        android:layout_marginBottom="50dp">

        <LinearLayout
            android:id="@+id/linearLayoutProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/applyApplication"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:backgroundTint="#6C63FF"
                android:fontFamily="@font/inter_extrabold"
                android:paddingHorizontal="50dp"
                android:paddingVertical="20dp"
                android:text="@string/currentApplication"
                android:textColor="#EAEAEA"
                android:textSize="15dp"
                app:cornerRadius="20dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/applicationButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profileButton"
                android:layout_centerHorizontal="true"
                android:layout_marginVertical="10dp"
                android:backgroundTint="#6C63FF"
                android:fontFamily="@font/inter_extrabold"
                android:paddingHorizontal="50dp"
                android:paddingVertical="20dp"
                android:text="@string/previousApplication"
                android:textColor="#EAEAEA"
                android:textSize="15dp"
                app:cornerRadius="20dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/profileButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/applicationButton"
                android:layout_marginVertical="10dp"
                android:backgroundTint="#6C63FF"
                android:fontFamily="@font/inter_extrabold"
                android:paddingHorizontal="50dp"
                android:paddingVertical="20dp"
                android:text="@string/Profile"
                android:textColor="#EAEAEA"
                android:textSize="15dp"
                app:cornerRadius="20dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/logoutButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profileButton"
                android:layout_centerHorizontal="true"
                android:layout_marginVertical="10dp"
                android:backgroundTint="#6C63FF"
                android:fontFamily="@font/inter_extrabold"
                android:paddingHorizontal="50dp"
                android:paddingVertical="20dp"
                android:text="@string/Logout"
                android:textColor="#EAEAEA"
                android:textSize="15dp"
                app:cornerRadius="20dp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>